--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,5 +1,4 @@
-require("babel-register");
-
+require('@babel/register');
 const path = require( 'path' );
 
 const commonPath = path.resolve( 'src', 'db' );
