--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node ./src/index.js"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
